--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,15 @@
 
 
   <meta charset="utf-8">
-  <title>Currencyconverter</title>
+  <title>AirThin Currency Converter | Amish Raj</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/logo.png">
 
 
   <style>
-    html {
-      font-family:;  }
+    /* html {
+      font-family:;  } */
 
       body{
         background-color: rgb(248, 255, 249);
